--- a/index.html
+++ b/index.html
@@ -145,20 +145,67 @@
                 title: "Kırılma Noktası",
                 author: "İstanbul'un Gölgeleri",
                 content: [
-                    `<div class="text-center"><h3 class="text-5xl md:text-7xl font-bold" style="font-family: 'Playfair Display', serif;">KIRILMA NOKTASI</h3><h4 class="text-2xl md:text-3xl italic mt-4">İSTANBUL'UN GÖLGELERİ</h4><p class="mt-8 text-base italic">Sayfayı çevirmek için kaydırın veya oklara tıklayın.</p></div>`,
-                    `<h4 class="text-xl italic text-center mb-4">BİRİNCİ KISIM: GÜNAH TOHUMU</h4><p class="text-center text-sm italic mb-6">(Kasım 1875 - Tophane)</p><p class="mb-4 text-justify indent-8">Haliç’in sularına karışan kömür dumanları, İstanbul’un üzerine kasvetli bir perde çekmişti. Süleyman, Tophane’deki kiralık odasında annesinin mektubunu titreyen parmaklarıyla tutarken, mürekkep lekeli satırlar gözlerini yakıyordu: <em>"Oğul, babanın emaneti zümrüt yüzüğü Hüsnü Efendi’ye rehin bıraktık. Seni okutabilmek için..."</em> Pencerenin buzlu camından süzülen soluk ışık, on yıl öncesine, Konya’daki medrese avlusuna götürdü onu. Babası Hafız Mehmet Efendi, 93 Harbi’ne giderken o zümrüdu avucuna sıkıştırmıştı: <em>"Deden Çanakkale’de bu taşı göğsünde taşıdı! İngiliz güllesi zırhlıyı parçaladığında, enkazın altından onu çıkardı. Bil ki bu yüzük, bizim namusumuzdur!"</em></p><p class="text-center italic mt-6">(Sayfa 1)</p>`,
-                    `<p class="mb-4 text-justify indent-8">Dışarıda Şirket-i Hayriye vapurunun keskin düdük sesi, Karaköy rıhtımının karmaşasını bölüyordu. Süleyman’ın ceketinin iç cebinde, Çerkes piyade bıçağının soğuk metali terli tenine yapışmıştı. Kasımpaşa’nın dar yokuşlarında ilerlerken, Sirkeci’deki meyhanelerden yükselen bozuk ud sesleri kulaklarını tırmalıyordu. <em>Hacı Arif Kahvesi</em>’nin önünde, kör dilenci Hüseyin’in Battal Gazi hikâyesi duyuluyordu: <em>"Zalim Yezid’in kılıcı kendi ciğerine saplanır evlat! Adalet terazisi bozulunca..."</em></p><p class="mb-4 text-justify indent-8">Hüsnü Efendi’nin konağının bahçe kapısı, her zamanki gibi aralıktı. Süleyman içeri süzülürken, altın varaklı aynalarda kendi çarpık siluetini gördü. Tefeci, ceviz masasında rakısını yudumlarken parmağındaki zümrüdü ışığa tutuyordu: <em>"Süleyman Efendi! Mecelle’nin 97. maddesi hükmünce, borcun vadesi doldu. Yarın sabaha beş yüz kuruşun yoksa..."</em> Masanın üzerinde duran <em>Tercüman-ı Ahvâl</em> gazetesi, V. Murad’ın tahttan indirildiğini haykırıyordu.</p><p class="text-center italic mt-6">(Sayfa 2)</p>`,
-                ]
-            },
-            {
-                id: 2,
-                title: "Yeni Kitabım",
-                author: "Yazar Adı",
-                content: [
-                    `<div class="text-center"><h3 class="text-5xl font-bold" style="font-family: 'Playfair Display', serif;">YENİ KİTABIM</h3><p class="mt-8">Bu, ekleyeceğiniz yeni bir kitabın ilk sayfasıdır.</p></div>`,
-                    `<p>Bu da ikinci sayfası.</p>`
+                    // Sayfa 1: Kapak
+                    `<div class="text-center">
+                        <h3 class="text-5xl md:text-7xl font-bold" style="font-family: 'Playfair Display', serif;">KIRILMA NOKTASI</h3>
+                        <h4 class="text-2xl md:text-3xl italic mt-4">İSTANBUL'UN GÖLGELERİ</h4>
+                        <p class="mt-8 text-base italic">Sayfayı çevirmek için kaydırın veya oklara tıklayın.</p>
+                    </div>`,
+                    // Sayfa 2
+                    `<h4 class="text-xl italic text-center mb-4">BİRİNCİ KISIM: GÜNAH TOHUMU</h4>
+                     <p class="text-center text-sm italic mb-6">(Kasım 1875 - Tophane)</p>
+                     <p class="mb-4 text-justify indent-8">Haliç’in sularına karışan kömür dumanları, İstanbul’un üzerine kasvetli bir perde çekmişti. Süleyman, Tophane’deki kiralık odasında annesinin mektubunu titreyen parmaklarıyla tutarken, mürekkep lekeli satırlar gözlerini yakıyordu: <em>"Oğul, babanın emaneti zümrüt yüzüğü Hüsnü Efendi’ye rehin bıraktık. Seni okutabilmek için..."</em> Pencerenin buzlu camından süzülen soluk ışık, on yıl öncesine, Konya’daki medrese avlusuna götürdü onu. Babası Hafız Mehmet Efendi, 93 Harbi’ne giderken o zümrüdu avucuna sıkıştırmıştı: <em>"Deden Çanakkale’de bu taşı göğsünde taşıdı! İngiliz güllesi zırhlıyı parçaladığında, enkazın altından onu çıkardı. Bil ki bu yüzük, bizim namusumuzdur!"</em></p>
+                     <p class="text-center italic mt-6">(Sayfa 1)</p>`,
+                    // Sayfa 3
+                    `<p class="mb-4 text-justify indent-8">Dışarıda Şirket-i Hayriye vapurunun keskin düdük sesi, Karaköy rıhtımının karmaşasını bölüyordu. Süleyman’ın ceketinin iç cebinde, Çerkes piyade bıçağının soğuk metali terli tenine yapışmıştı. Kasımpaşa’nın dar yokuşlarında ilerlerken, Sirkeci’deki meyhanelerden yükselen bozuk ud sesleri kulaklarını tırmalıyordu. <em>Hacı Arif Kahvesi</em>’nin önünde, kör dilenci Hüseyin’in Battal Gazi hikâyesi duyuluyordu: <em>"Zalim Yezid’in kılıcı kendi ciğerine saplanır evlat! Adalet terazisi bozulunca..."</em></p>
+                     <p class="mb-4 text-justify indent-8">Hüsnü Efendi’nin konağının bahçe kapısı, her zamanki gibi aralıktı. Süleyman içeri süzülürken, altın varaklı aynalarda kendi çarpık siluetini gördü. Tefeci, ceviz masasında rakısını yudumlarken parmağındaki zümrüdü ışığa tutuyordu: <em>"Süleyman Efendi! Mecelle’nin 97. maddesi hükmünce, borcun vadesi doldu. Yarın sabaha beş yüz kuruşun yoksa..."</em> Masanın üzerinde duran <em>Tercüman-ı Ahvâl</em> gazetesi, V. Murad’ın tahttan indirildiğini haykırıyordu.</p>
+                     <p class="text-center italic mt-6">(Sayfa 2)</p>`,
+                    // Sayfa 4
+                    `<p class="mb-4 text-justify indent-8">Süleyman’ın zihninde medrese hocası Şeyh Emin’in sesi çınladı: <em>"Adalet mülkün temelidir! Peki mülk çürümüşse?"</em> Cebindeki bıçağın kabzası avucunda ısındı. Hüsnü Efendi ayağa kalktı, zümrüdü savururken: <em>"Sizin gibi sözde efendiler, aslında benim gibi adamların ayakkabılarını bile..."</em></p>
+                     <p class="mb-4 text-justify">Sözünü bitiremedi.</p>
+                     <p class="mb-4 text-justify indent-8">Bıçak, tefecinin boğazına saplandığında, gözlerindeki şaşkın ifade Süleyman’ın beynine kazındı. Kan, masadaki <em>Mecelle</em> nüshasının sayfalarına yayılırken, zümrüt yüzük parmağından fırladı. Süleyman taşı kapıp karanlığa karıştığında, Kör Hüseyin’in sesi kulaklarında uğulduyordu: <em>"Battal Gazi dahi zulmün bedelini canıyla ödemiştir!"</em></p>
+                     <p class="text-center italic mt-6">(Sayfa 3)</p>`,
+                    // Sayfa 5
+                    `<p class="mb-4 text-justify indent-8">Sirkeci rıhtımında, denizin karanlık sularına ellerini daldırdı. Kan izleri, Haliç’in yüzen çöpleri arasında kaybolurken, kusmuk ağzının tadını ekşitiyordu. Bir sandalın kürek sesleri yaklaştı: <em>"Gece bu vakitte ne arıyorsun delikanlı?"</em> Kayıkçının yüzü meşin gibiydi. Süleyman boğuk bir sesle yanıt verdi: <em>"Kayboldum... Kasımpaşa’ya gidecektim."</em> Adam gülümsedi: <em>"Kasımpaşa değil gönlün karışmış belli ki!"</em></p>
+                     <p class="text-center italic mt-6">(Sayfa 4)</p>`,
+                    // Sayfa 6
+                    `<h4 class="text-xl italic text-center mb-4">BEYOĞLU'NUN İKİ YÜZÜ</h4>
+                     <p class="text-center text-sm italic mb-6">(Ertesi Gün - Pera Palas Yolu)</p>
+                     <p class="mb-4 text-justify indent-8">Sabahın ilk ışıkları Galata Kulesi’ni yalarken, Süleyman kendini Pera’nın taş döşeli caddelerinde buldu. <em>Deux Chapeaux</em> şapkacısının vitrinindeki silindir şapkalar, <em>La Bonne Cuisine</em>’nin kruvasan kokuları, dün geceyi sisli bir kabusa dönüştürüyordu. Server Paşa’nın davet davetiyesi cebinde yanıyordu: <em>"Mevlid Kandili Münasebetiyle..."</em></p>
+                     <p class="mb-4 text-justify indent-8">Konağın görkemli kapısından içeri adım attığında, avizenin kristal ışıltıları gözlerini kamaştırdı. İpekli tuvaletler içindeki kadınlar, Fransız moda dergilerini tartışıyordu: <em>"Bu sene Paris’te krinolin modası bitti mi?"</em> Süleyman’ın sırtına bir el dokundu. Arkasında Murat duruyordu, yüzünde şık bir gülümseme: <em>"Süleyman! Server Paşa’nın kızı Emine Hanım’ı tanıştırayım."</em></p>
+                     <p class="text-center italic mt-6">(Sayfa 5)</p>`,
+                    // Sayfa 7
+                    `<p class="mb-4 text-justify indent-8">Emine, mor ipekli feracesiyle ışığı adeta içine çekiyordu. Elindeki <em>Felâtun Bey ile Râkım Efendi</em> kitabına parmağını dayamış, zeki siyah gözleriyle Süleyman’ı süzüyordu: <em>"Murat Bey sizi Galatasaray’daki hukuk tartışmalarınızdan övgüyle anlatıyor. Acaba sizce,"</em> kitabın kapağını tıklattı, <em>"gerçek terakki hangisinin yolunda? Râkım’ın çalışkanlığında mı, yoksa Felâtun’un züppeliğinde mi?"</em></p>
+                     <p class="mb-4 text-justify indent-8">Süleyman’ın boğazı kurudu. Bu kızın üç yaşında kolera salgınında annesini kaybettiğini, dedesi Müftü Hamit Efendi’nin kütüphanesinde büyüdüğünü biliyordu. <em>"Terakki,"</em> diye yanıt verdi sesindeki titremeyi bastırarak, <em>"Ziya Paşa’nın dediği gibi: Âyinesi iştir kişinin lafa bakılmaz! Ne yazık ki bu şehirde aynalar hep kırık."</em></p>
+                     <p class="text-center italic mt-6">(Sayfa 6)</p>`,
+                    // Sayfa 8
+                    `<p class="mb-4 text-justify indent-8">Tam o anda salonun kapısında bir dalgalanma oldu. Üniformasının düğmeleri parıl parıl parlayan genç bir adam içeri girdi. Murat fısıldadı: <em>"Dedektif Cevdet Bey. Hüsnü Efendi cinayetini soruşturuyor."</em> Cevdet’in babası, Kırım Savaşı’nda şehit düşmüş bir binbaşıydı. Mekteb-i Tıbbiye’de pozitivist fikirlerle tanışan bu genç, elindeki deftere bir şeyler not ediyordu.</p>
+                     <p class="mb-4 text-justify indent-8">Cevdet gözlerini salonda gezdirdi, sonra aniden Süleyman’a kilitlendi. O anda Emine’nin kuzeni Leyla, Murat’ın koluna yapışmış fısıldıyordu: <em>"Babam çeyiz için yeterli altın ayarlayamadı..."</em> Murat’ın yüzündeki donuk ifade her şeyi anlatıyordu.</p>
+                     <p class="text-center italic mt-6">(Sayfa 7)</p>`,
+                    // Sayfa 9
+                    `<h4 class="text-xl italic text-center mb-4">VİCDANIN İLK DARBESİ</h4>
+                     <p class="text-center text-sm italic mb-6">(Aynı Gece - Tophane Meyhanesi)</p>
+                     <p class="mb-4 text-justify indent-8">Gece yarısı Tophane’deki <em>Külhanbeyi Meyhanesi</em>’nin loş ışıklarında, Süleyman rakı kadehinin dibindeki anason çekirdeklerine bakıyordu. Kör Hüseyin’in sazı duvara dayalıydı, kendisi ise masada neredeyse bayılmıştı. <em>"Hüsnü Efendi’yi duydun mu Hüseyin?"</em> diye sordu Süleyman. Adam görmeyen gözlerini kırpıştırdı: <em>"Duymaz olur muyum evlat? Meğer kimlerin alnına kara yazılmış..."</em></p>
+                     <p class="mb-4 text-justify indent-8">Dışarıda polis nöbetçisinin ayak sesleri duyuldu. Süleyman irkildi. Hüseyin kahkaha attı: <em>"Korkma oğul, onlar tebdil gezen hafiyeler değil! Asıl tehlike..."</em> Sözünü yarıda kesti, kulağını kapıya verdi. <em>"Ayak sesleri... Üç kişi. Biri ağır, ikisi hafif."</em> Kapı çalındığında Süleyman’ın kalbi yerinden fırlayacak gibiydi. Gelen Cevdet Bey ve iki yardımcısıydı.</p>
+                     <p class="text-center italic mt-6">(Sayfa 8)</p>`,
+                    // Sayfa 10
+                    `<p class="mb-4 text-justify indent-8"><em>"Süleyman Efendi,"</em> dedi Cevdet soğuk bir sesle, <em>"cinayet gecesi Sirkeci’de bir kayıkçı sizi gördüğünü ifade etti."</em> Süleyman kadehi masaya bıraktı: <em>"Yanılıyor olmalı."</em> Cevdet defterini açtı: <em>"Kayıkçı Halil: 'Genç, solak, hukuk talebesi kılıklı biriydi' diyor. Siz de solaksınız değil mi?"</em></p>
+                     <p class="mb-4 text-justify indent-8">O gece Süleyman odasında uyuyamadı. Duvardaki saat her vuruşunda, Hüsnü Efendi’nin kanlı gömleği gözlerinin önüne geliyordu. Şafak sökerken, masanın çekmecesinden bir defter çıkardı. İlk satırı kan mürekkeple yazdı:</p>
+                     <p class="font-bold text-center mt-4"><em>"Madde 1: Her cinayet, iki kez işlenir. Biri bedende, diğeri ruhta..."</em></p>
+                     <p class="text-center italic mt-6">(Sayfa 9)</p>`
                 ]
             }
+            // YENİ KİTAP EKLEMEK İÇİN:
+            // ,  <-- (önceki kitabın sonuna virgül koyun)
+            // {
+            //     id: 2,
+            //     title: "Başka Bir Kitap",
+            //     author: "Yeni Yazar",
+            //     content: [
+            //         "İlk sayfa içeriği.",
+            //         "İkinci sayfa içeriği."
+            //     ]
+            // }
         ];
         // ==================================================================
         // === KODUN GERİ KALANINI DEĞİŞTİRMENİZE GEREK YOK ==============
